[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akhil4n-orderbook"
version = "0.1.1"
description = "A high-performance order book implementation in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sortedcontainers>=2.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/Akhil4n/py-orderbook"

[tool.setuptools]
py-modules = ["orderbook"]